<resources>
    <string name="app_name">Taller 3</string>
    <string name="registerTxtBtn"><u>Regístrate</u></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="view_real_time_location_btn_desc">View real time location</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_aa">Contraseña:</string>
    <string name="e_mail">E-mail</string>
    <string name="email">Email:</string>
    <string name="welcome">Welcome</string>
    <string name="starwalker">STARWALKER</string>
    <string name="agregar_foto_de_perfil">Agregar foto de perfil</string>
    <string name="sign_up">Sign Up</string>
    <string name="ingrese_su_cedula">Ingrese su Cedula</string>
    <string name="numero_de_cedula">Numero de Cedula:</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="contrase_aq">Contraseña:</string>
    <string name="ingrese_su_apellido">Ingrese su Apellido</string>
    <string name="apellido">Apellido:</string>
    <string name="ingrese_su_nombre">Ingrese su Nombre</string>
    <string name="nombre">Nombre:</string>
    <string name="ingrese_su_email">Ingrese su Email</string>
    <string name="emailq">Email:</string>
</resources>