<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LogInActivity">

        <ImageView
            android:id="@+id/fireBaseImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/gray_frame"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/android" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/fireBaseImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/creators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/starwalker"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/fireBaseImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/black_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fireBaseImg">

            <TextView
                android:id="@+id/availableUsersLbl"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/gray_box"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/passwordLbl"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/contrase_aa"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints="password"
                android:background="@drawable/gray_box"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/iniciar_sesi_n"/>


            <TextView
                android:id="@+id/registerTxtBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:text="@string/crear_cuenta"
                android:textColor="#3F51B5"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>